--- a/src/ListenTogether/Controls/FavoriteView.xaml
+++ b/src/ListenTogether/Controls/FavoriteView.xaml
@@ -2,15 +2,15 @@
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="ListenTogether.Controls.FavoriteView"
-    x:Name="self">
-    <Image
+    xmlns:hc="clr-namespace:ListenTogether.HandCursorControls"
+    x:Class="ListenTogether.Controls.FavoriteView">
+    <hc:HandCursorImage
         x:Name="ImgFavorite"
         Source="{AppThemeBinding Light=add_to_favorite.png,Dark=add_to_favorite_dark.png}"
         Aspect="AspectFill"
         ToolTipProperties.Text="添加到我的歌单">
-        <Image.GestureRecognizers>
+        <hc:HandCursorImage.GestureRecognizers>
             <TapGestureRecognizer Tapped="Favorite_Tapped"/>
-        </Image.GestureRecognizers>
-    </Image>
+        </hc:HandCursorImage.GestureRecognizers>
+    </hc:HandCursorImage>
 </ContentView>
