--- a/src/ListenTogether/Controls/MessageDialog.xaml
+++ b/src/ListenTogether/Controls/MessageDialog.xaml
@@ -1,6 +1,7 @@
 <toolkit:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+               xmlns:hc="clr-namespace:ListenTogether.HandCursorControls"
                x:Class="ListenTogether.Controls.MessageDialog"
                CanBeDismissedByTappingOutsideOfPopup="False"
                Size="300,150">
@@ -13,7 +14,7 @@
             Grid.Row="0"
             x:Name="LblMessage"
             HorizontalOptions="CenterAndExpand"/>
-        <Button
+        <hc:HandCursorButton
             Grid.Row="1"
             Text="确定"
             Clicked="BtnClose_Clicked"/>
